# My-Testbed

./: .gitignore  README.md
flexric/: flexric.conf  flexric1.conf  flexric2.conf  kpm_data.db
flexric/examples/xApp/c/monitor/: CMakeLists.txt  xapp_kpm_moni.c
flexric/src/sm/kpm_sm/: kpm_data_ie_wrapper.h
flexric/src/sm/kpm_sm/kpm_sm_v02.03/ie/: kpm_data_ie.h
flexric/src/sm/kpm_sm/kpm_sm_v02.03/ie/kpm_data_ie/kpm_ric_info/: CMakeLists.txt  kpm_ric_ind_msg_frm_1.h
flexric/src/xApp/db/: CMakeLists.txt  db.c  db.h
flexric/src/xApp/db/sqlite3/: CMakeLists.txt  sqlite3_wrapper.c
oai-spring-of-code/: README.md
oai-spring-of-code/cn/: README.md  docker-compose-ran-b210.yml  docker-compose-ran.yml
oai-spring-of-code/colosseum/: README.md
oai-spring-of-code/oam/: README.md
oai-spring-of-code/ran/: README.md
oai-spring-of-code/ran/conf/: gnb-cu.sa.f1.conf  gnb-du.sa.band78.106prb.rfsim.conf  gnb.sa.band78.106prb.rfsim.conf
openairinterface5g/openair2/E2AP/flexric/: CMakeLists.txt
openairinterface5g/openair2/E2AP/flexric/src/sm/kpm_sm/kpm_sm_v02.03/ie/: kpm_data_ie.h
openairinterface5g/openair2/E2AP/flexric/src/xApp/db/: CMakeLists.txt
openairinterface5g/openair2/E2AP/flexric/src/xApp/db/sqlite3/: CMakeLists.txt
socket-scripts/: mock-client.py  mock-server.py
